--- a/template.env
+++ b/template.env
@@ -3,6 +3,12 @@
 # Model file to setup .env
 #
 #     EVERY parameter below must be filled appropriately in order to have adequate execution of main.sh 
+#
+# About them:
+#  SMTP_MAIL_RECEIVER -> an email address
+#  SMTP_MAIL_SENDER   -> an email address
+#  SMTP_GMAIL_RELAY   -> GMail's Relay login + '\:' + its password
+#
 SMTP_MAIL_RECEIVER=''
 SMTP_MAIL_SENDER=''
 SMTP_RELAY_CREDENTIALS=''
