--- a/template.env
+++ b/template.env
@@ -7,7 +7,7 @@
 # About them:
 #  SMTP_MAIL_RECEIVER -> an email address
 #  SMTP_MAIL_SENDER   -> an email address
-#  SMTP_GMAIL_RELAY   -> GMail's Relay login + '\:' + its password
+#  SMTP_GMAIL_RELAY   -> GMail's Relay login + ':' + its password
 #
 SMTP_MAIL_RECEIVER=''
 SMTP_MAIL_SENDER=''
