--- a/template.env
+++ b/template.env
@@ -9,6 +9,6 @@
 #  SMTP_MAIL_SENDER   -> an email address
 #  SMTP_GMAIL_RELAY   -> GMail's Relay login + ':' + its password
 #
-SMTP_MAIL_RECEIVER=''
-SMTP_MAIL_SENDER=''
-SMTP_RELAY_CREDENTIALS=''
+SMTP_MAIL_RECEIVER='rcpt@mail.com'
+SMTP_MAIL_SENDER='from@mail.com'
+SMTP_RELAY_CREDENTIALS='user_relay@gmail.com:password'
