Implements options parser for unordered input

--- a/template.env
+++ b/template.env
@@ -5,9 +5,9 @@
 #     EVERY parameter below must be filled appropriately in order to have adequate execution of main.sh 
 #
 # About them:
-#  SMTP_MAIL_RECEIVER -> an email address
-#  SMTP_MAIL_SENDER   -> an email address
-#  SMTP_GMAIL_RELAY   -> GMail's Relay login + ':' + its password
+#  SMTP_MAIL_RECEIVER     -> An email address
+#  SMTP_MAIL_SENDER       -> An email address
+#  SMTP_RELAY_CREDENTIALS -> GMail's Relay login + ':' + its password
 #
 SMTP_MAIL_RECEIVER='rcpt@mail.com'
 SMTP_MAIL_SENDER='from@mail.com'
