Adds parameter for WSL network adapter

--- a/template.env
+++ b/template.env
@@ -5,10 +5,12 @@
 #     EVERY parameter below must be filled appropriately in order to have adequate execution of main.sh 
 #
 # About them:
+#  MAC_ADDRESS_WSL_OUI    -> The WSL's Mac Address Organizationally Unique Identifier (OUI) - it is the first 6 numbers on WSL's Network Adapter (for hosts on Windows OSs)
 #  SMTP_MAIL_RECEIVER     -> An email address
 #  SMTP_MAIL_SENDER       -> An email address
 #  SMTP_RELAY_CREDENTIALS -> GMail's Relay login + ':' + its password
 #
+MAC_ADDRESS_WSL_OUI='ff:ff:ff'
 SMTP_MAIL_RECEIVER='rcpt@mail.com'
 SMTP_MAIL_SENDER='from@mail.com'
 SMTP_RELAY_CREDENTIALS='user_relay@gmail.com:password'
